package com.kenzie.groupactivity.bigspender.types;

/**
 * AWS services we want to report spending on.
 */
public enum ServiceType {
    DYNAMODB,
    EC2,
    ECS,
    LAMBDA,
    S3,
    SAGEMAKER,
    SNS,
    SQS
}
